# EarningsLoRA

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: components.py  streamlit_app.py
app/space/: README.md  app.py  requirements.txt
data/: README.md
docs/: architecture.md  deployment.md  evaluation.md  setup.md  training.md  why-fine-tune.md
notebooks/: 01_dataset_exploration.ipynb  02_baseline_zero_shot.ipynb  03_qlora_training.ipynb  README.md
reports/: README.md
scripts/: evaluate.py  prepare_dataset.py  publish.py  train.py
src/earningslora/: __init__.py  config.py
src/earningslora/data/: chunk.py  ectsum.py  format.py  stats.py
src/earningslora/demo/: __init__.py  shared.py
src/earningslora/evaluation/: bench.py  frontier_baseline.py  harness.py  llm_judge.py  numeric_recall.py  rouge.py
src/earningslora/inference/: generate.py  load.py  merge.py
src/earningslora/training/: callbacks.py  lora_config.py  sft.py
src/earningslora/utils/: cache.py  hf_hub.py  prompts.py
tests/integration/: test_inference_cpu.py
tests/unit/: test_bench.py  test_cache.py  test_callbacks.py  test_chunk.py  test_components.py  test_config.py  test_ectsum.py  test_format.py  test_harness.py  test_hf_hub.py  test_judge.py  test_numeric_recall.py  test_prompts.py  test_rouge.py  test_stats.py
