[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earningslora"
version = "0.1.0"
description = "QLoRA fine-tuning of a 3B open model on earnings call transcripts for analyst-style bullet summaries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mathieu Calvo" }]

dependencies = [
    "datasets>=2.19",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
train = [
    "torch>=2.3",
    "transformers>=4.44",
    "peft>=0.12",
    "trl>=0.10",
    "bitsandbytes>=0.43; platform_system != 'Windows'",
    "accelerate>=0.33",
    "wandb>=0.17",
]
eval = [
    "rouge-score>=0.1.2",
    "google-generativeai>=0.7",
]
app = [
    "streamlit>=1.36",
    "huggingface-hub>=0.23",
    "gradio>=4.44",
    "spaces>=0.28",
    "requests>=2.31",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that need a GPU or live network (excluded from CI)",
]
